--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h2>This Is foobar!</h2>
+        <h2>Nathan Potter</h2>
     </body>
 </html>
